# finance-manager

./: README.md  db.sqlite3  pyproject.toml
app/: managers.py  mixins.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_category_ico_name_operation_desctiption_and_more.py
fin_manager/: settings.py  urls.py
static/: main.css
templates/app/: category_list.html  counter.html  index.html  models_form.html  operation_list.html
